added new combat system